dev/app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev1
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-database
