dev/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev1
  template:
    metadata:
      labels:
        app: dev1
    spec:
      containers:
      - name: dev1
        image: fekam/dev1:latest
        ports:
        - containerPort: 8080
