dev/app/app-01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-01-service
  namespace: dev1
spec:
  type: LoadBalancer
  selector:
    app: app-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
