dev/app/mysql-database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: mysql-database
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: centos/mysql-57-centos7
          name: mysql

          ports:
            - name: mysql-database
              containerPort: 3306


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql-database
spec:
  ports:
    - name: mysql-database
      protocol: TCP
      port: 3306
      nodePort: 30036
      targetPort: 3306
  type: NodePort
  selector:
    app: mysql
