dev/app/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: mysql-database
spec:
  selector:
    app: phpmyadmin
  type: NodePort
  ports:
    - name: phpmyadmin
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
