dev/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: dev1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
