dev/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: dev1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: phpmyadmin.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 30000
  - host: app01.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-01-service
            port:
              number: 30006
